  * Added (has-sxml-tag? sxml tag) to lib/xml
  * Added (has-sxml-attr? sxml key value) to lib/xml
  * Added (sxml-drill sxml test ...) to lib/sxml; example: 
    >> (define xml '(html (body (p "alpha" (a (@ (href . "a")) "aleph")) (p "beta"))))
    >> (sxml-drill xml is-body? is-p? is-a?)
    :: (a (@ (href . "a")) "aleph")
  * lib/xml's parser now handles sequential comments more reliably.

- 4/18/2006, XML Parser
  * Added lib/mailto-url.ms, support for mailto URLs that was written in 
    response to documentation's request for a simpler usage of 
    register-url-parser.
  * Fixed module header in lib/http-url.ms
  * Added file-len, file-pos, file-seek and file-skip methods for file ports
    to lib/file-port
  * Added bin/incr-repl.ms, a REPL that logs each instruction to a file to
    simplify the incremental creation of MOSVM applications and test suites.
  * Added assoc prim to core.
  * Modified open-input-file to correctly return *eof* when read-descr yields
    #f to indicate end of the file.
  * Modified read <port> to correctly use the close method to close the port
    instead of just marking it out of service.
  * Added -g flag to the MOSVM stub; invoking the stub with -g will cause a 
    list of global variables to be displayed prior to exit.
  * Added lib/xml.ms, a library that parses XML strings and files into S-XML
    data structures. 

- 4/14/2006, Miscellaneous Bug Fixes
  * Added test directory to package target.
  * Overhauled lib/build to rely on core/module and lib/module.
  * Fixed build-exe when used to compile a module to a binary.
  * Added (read-platform-stub platform)
  * Added stub path configuration to bin/situation.sh
  * Restored queue class definition to lib/queue.
  * Extended read-descr-line to support file descriptors.
  * Altered lib/crypto-port to only operate on 64k messages at a time to
    avoid the possibility of a garbled message header causing an absurdly
    large buffer to be constructed.